AC_INIT(x_frotz.h)
AM_INIT_AUTOMAKE(xfrotz, 2.32.1)

AC_PROG_CC
AC_PATH_XTRA

AC_CHECK_HEADERS(sys/soundcard.h)
AC_PATH_PROG(BDFTOPCF, bdftopcf)
AC_PATH_PROG(MKFONTDIR, mkfontdir, :)

AC_ARG_ENABLE(xfonts,
  [  --enable-xfonts[=DIR]   install the Beyond Zork fonts (default)],
  , enable_xfonts=yes)
AC_MSG_CHECKING(whether to install the Beyond Zork fonts)
case "$enable_xfonts" in
  no)   INSTALL_FONTS=
        XFONTS_DIR=
        AC_MSG_RESULT(no)
        ;;
  yes)  if test -f "${ac_x_libraries}/X11/fonts/misc/fonts.dir"; then
            INSTALL_FONTS=install-fonts
            XFONTS_DIR="${ac_x_libraries}/X11/fonts/misc"
            AC_MSG_RESULT([yes, in ${XFONTS_DIR}])
        else
            INSTALL_FONTS=
            XFONTS_DIR=
            AC_MSG_RESULT(no)
        fi
        ;;
  *)    INSTALL_FONTS=install-fonts
        XFONTS_DIR="$enable_xfonts"
        AC_MSG_RESULT([yes, in ${XFONT_DIR}])
        ;;
esac

CFLAGS="$CFLAGS $X_CFLAGS"
LIBS="$LIBS $X_LIBS $X_PRE_LIBS -lX11 $X_EXTRA_LIBS -lXt"

AM_CONFIG_HEADER(config.h)
AC_SUBST(INSTALL_FONTS)
AC_SUBST(XFONTS_DIR)
AC_OUTPUT(Makefile)
